--- a/public/assets/css/new_our_clients.css
+++ b/public/assets/css/new_our_clients.css
@@ -139,14 +139,14 @@ width: 100%;
     height: 70%;
   }
   .our_clients_overlay{
-        height: 70%;
+        height: 49%;
   }
   .new_our_clients_container{
         padding-bottom: 0%;
   }
   .our_client_buttons{
     position: absolute;
-    top: 79%;
+    top: 65%;
     width: 100%;
   }
 }
@@ -269,5 +269,26 @@ z-index: 999;
   }
   .our_clients_text_banner{
     width:70%;
+  }
+}
+
+@media screen and (max-width:1100px) and (min-width:900px) and (orientation:portrait){
+  .new_our_clients_container{
+        margin-top: 32.5%;
+  }
+  .our_clients_col {
+    height: 70%;
+
+}
+  .button_col_our_clients {
+    margin-left: 35%;
+  }
+  .our_client_button{
+    z-index:999;
+    position: relative;
+    height: 2rem;
+    width: 20%;
+    float: left;
+    margin-left: 10%;
   }
 }
