--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -1166,3 +1166,13 @@ flex:100%;
     height:70vh !important;
 }
 }
+
+
+@media screen and (max-width:800px) and (min-width:600px){
+  .banners{
+    top: 125% !important;
+    }
+    .cfs-heading{
+      font-size:4.5rem !important;
+    }
+}
