--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -168,7 +168,7 @@ span{
     top:55% !important;
   }
 }
-@media screen and (max-width:1100px) and (orientation:portrait) and (min-width:900px){
+@media screen and (max-width:800px) and (orientation:portrait) and (min-width:600px){
   .showcase_container{
     margin-top: 1% !important;
     height:70vh;
@@ -182,6 +182,10 @@ span{
   .intro-text-container {
     width: 100%;
     margin-top: 0%;
+}
+.button_img{
+  height: 2rem !important;
+width: 2rem !important;
 }
 .showcase_text_text_container {
     margin-left: -2.5%;
@@ -201,8 +205,9 @@ span{
     background: #00103d;
 }
 .showcase_banner--1 {
-    width: 80%;
-    height: 6vh;
+    max-width: 90%;
+    width:80%;
+        height: 6vh;
     background: linear-gradient(to right,rgba(0, 0, 0, 1),rgba(0, 0, 0, .5)) !important;
 }
 .about_description{
