--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -540,7 +540,8 @@ padding-left: 5% ;
 
 @media screen and (max-width: 900px) and (min-width:600px) and (orientation: portrait) {
 .about_us_row{
-  margin-top:45% !important
+  margin-top:45% !important;
+  margin-left:5%;
 }
 .home_quote_container{
   width:90%;
