--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -321,6 +321,7 @@ a:hover{
   }
   .what_we_do_description{
         width: 80%;
+        text-align: justify;
   }
   .about_container {
     position: relative;
