--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -277,7 +277,11 @@ width: 2rem !important;
 
 }
 } */
-
+@media screen and (min-width:601px) and (max-width:800px) and (orientation:landscape){
+  .banner{
+    top:115% !important;
+  }
+}
 @media screen and (max-width:600px) and (orientation:portrait){
   .cfs-heading-container{
     width:120%;
