--- a/public/assets/css/new_our_clients.css
+++ b/public/assets/css/new_our_clients.css
@@ -258,6 +258,11 @@ z-index: 999;
     width:70%;
   }
 }
+@media screen and (min-width:601px) and (max-width:900px) and (orientation:landscape){
+  .our_clients_col {
+    height: 100% !important;
+  }
+}
 
 @media screen and (max-width:900px) and (min-width:600px) and (orientation:portrait){
   .new_our_clients_container{
