--- a/views/user/layout/about/what_we_do.ejs
+++ b/views/user/layout/about/what_we_do.ejs
@@ -16,15 +16,15 @@
               </p>
 
               <div class="row margin-top-small about_link_row">
-                  <div class="col-4 mobile-col-12">
+                  <div class="col-4 link_col mobile-col-12">
                       <a href="/quote"class="what_we_do_normal_link"><p class="what_we_do_link " > Free Quote </p></a>
                   </div>
 
-                  <div class="col-4 mobile-col-12">
+                  <div class="col-4 link_col mobile-col-12">
                       <a href="/#our_clients">  <p class="what_we_do_link   "> Contact Us </p></a>
                   </div>
 
-                  <div class="col-4 mobile-col-12">
+                  <div class="col-4 link_col mobile-col-12">
                     <a href="/#our_clients"class="what_we_do_normal_link"><p class="what_we_do_link  "> Our Work </p></a>
                   </div>
 
