--- a/views/user/layout/about/mission.ejs
+++ b/views/user/layout/about/mission.ejs
@@ -4,7 +4,7 @@
 
         <div class="col-3 mobile-col-1 about_us_divider"></div>
 
-        <div class="col-6 mobile-col-10 about_us_col mission_col">
+        <div class="col-6 mobile-col-10  mission_col">
             <p class="about_title "> Our Mission </p>
             <p class="about_description">
               Our mission is to revolutionize the facility services industry by fostering a team of people who care about the local community and are passionate about the customer.
