--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -449,6 +449,11 @@ padding-left: 5% ;
     transform: scale(1);
   }
 }
+@media screen and (min-width:601px) and (max-width:900px) and (orientation:landscape){
+  .about_us_col--2{
+    margin-top:20% !important;
+  }
+}
 @media screen and (max-width:490px) and (orientation:portrait){
 
   .form_col--inner{
