--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -8,7 +8,7 @@
     margin-top:22.5%
   }
   .mission_col{
-    padding-top:2.5% !important;
+    margin-top:5% !important;
     padding-bottom:2%;
     flex: 100% !important;
     max-width: 100% !important;
