--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -16,9 +16,9 @@
 
       <div class="intro-text-container showcase_text_container">
 
-        <div class="showcase_text_text_container">
+        <div class="showcase_text_inner_container">
           <h1 class="cfs-heading-container">
-                <span class="cfs-heading cfs-heading-1"style="color:#38B6FF"><%= showcase.heading_1 %></span>
+                <span class="cfs-heading cfs-heading-1"><%= showcase.heading_1 %></span>
                 <div class="brs"></div>
 
                 <span class="cfs-heading cfs-heading-2">
@@ -40,8 +40,6 @@
         </div>
     </div>
 
-  <div class="showcase_image_container">
-      <!-- <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" id="mobile_showcase"/> -->
-  </div>
+  
   <div class="showcase_number">480-822-0511</div>
 </div>
