--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -3,36 +3,40 @@
   color:white;
 }
 
-.navbar_custom{
-  background:  #0069a4 !important ;
-}
-
 .navbar_home{
   width:100%;
 }
+
 .navbar_container{
   padding:1%;
   z-index: 99229;
   position: relative;
   background:  #0069a4 !important ;
 }
+
 .link_nav{
   color:white;
   font-family: "Roboto";
   font-size: 18px;
 }
 
+.navbar_custom{
+  background:  #0069a4 !important ;
+  cursor: pointer !important
+}
+
 .button_img{
-filter: invert(23%) sepia(68%) saturate(968%) hue-rotate(167deg) brightness(97%) contrast(103%);
-    filter: invert(100) !important;
+/* filter: invert(23%) sepia(68%) saturate(968%) hue-rotate(167deg) brightness(97%) contrast(103%); */
+  filter: invert(100) !important;
 }
 
 .link_nav:hover{
   font-weight: bold;
 }
+
 .collapse-it:not(.show) {
-    display: none;
-    transition: all.5s;
+  display: none;
+  transition: all.5s;
 }
 
 @media screen and (max-width:770px) and (orientation:portrait) and (min-width:700px){
@@ -41,34 +45,32 @@ filter: invert(23%) sepia(68%) saturate(968%) hue-rotate(167deg) brightness(97%)
     padding: 0 1;
     height: 3rem;
     background: #0069a4 !important;
-}
-.link_nav {
-    font-size: 1.5rem;
-    margin-left: 10%;
-}
-.navbar_wrapper{
-  padding:0 5%;
+  }
+
+  .link_nav {
+      font-size: 1.5rem;
+      margin-left: 10%;
+  }
+
+  .navbar_wrapper{
+    padding:0 5%;
+  }
+
+  .sc_col{
+    -ms-flex: 0 0 16.666667%;
+        flex: 0 0 16.666667%;
+        max-width: 16.666667%;
+  }
+
+  .no_col{
+    flex:0%;
+    width:0%;
+    max-width:0%;
+  }
+
 }
 
-.sc_col{
-  -ms-flex: 0 0 16.666667%;
-      flex: 0 0 16.666667%;
-      max-width: 16.666667%;
-}
-.no_col{
-  flex:0%;
-  width:0%;
-  max-width:0%;
-}
-.showcase_container {
-    margin-top: 2.5% !important;
-    height: 70vh;
-}
 
-}
-.navbar_custom{
-  cursor: pointer !important
-}
 @media screen and (max-width:1200px) and (min-width:700px) {
   .navbar_wrapper{
     padding:0%;
